--- a/lands/Lands/Lands/Views/LandsPage.xaml
+++ b/lands/Lands/Lands/Views/LandsPage.xaml
@@ -6,9 +6,46 @@
              Title="Lands">
     <ContentPage.Content>
         <StackLayout Padding="5" BindingContext="{Binding Lands}">
-            <Label
-                Text="LandsPage"
-                FontSize="Large"/>
+            <SearchBar
+                Text="{Binding Filter, Mode=TwoWay}"
+                Placeholder="Search..."
+                SearchCommand="{Binding SearchCommand}"/>
+            <ListView 
+                ItemsSource="{Binding Lands}"
+                HasUnevenRows="True"
+                IsPullToRefreshEnabled="True"
+                IsRefreshing="{Binding IsRefreshing, Mode=TwoWay}"
+                RefreshCommand="{Binding RefreshCommand}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <StackLayout
+                                    Grid.Column="0"
+                                    VerticalOptions="Center">
+                                    <Label
+                                        FontAttributes="Bold"
+                                        FontSize="Medium"
+                                        Text="{Binding Name}"/>
+                                    <Label
+                                        TextColor="Black"
+                                        Text="{Binding Capital}"/>
+                                </StackLayout>
+
+                                <Image
+                                    Grid.Column="1"
+                                    HorizontalOptions="End"
+                                    Source="ic_chevron_right.png"/>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
