--- a/lands/Lands/Lands/Views/SingleLandPage.xaml
+++ b/lands/Lands/Lands/Views/SingleLandPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Lands.Views.SingleLandPage"
-             BindingContext="{Binding MainVM, Source={StaticResource Locator}}">
+             IconImageSource="ic_general.png"
+             BindingContext="{Binding MainVM, Source={StaticResource Locator}}"
+             Title="General">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout
