--- a/lands/Lands/Lands/Views/CurrenciesPage.xaml
+++ b/lands/Lands/Lands/Views/CurrenciesPage.xaml
@@ -6,10 +6,42 @@
              IconImageSource="ic_currencies.png"
              Title="Currencies">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Currencies"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout BindingContext="{Binding SingleLandVM}">
+            <Label 
+                Text="{Binding SelectedLand.Name}"
+                FontSize="Large"
+                FontAttributes="Bold"
+                TextColor="Black"
+                HorizontalOptions="Center"/>
+            <ListView
+                HasUnevenRows="True"
+                ItemsSource="{Binding Currencies}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Label
+                                    Grid.Column="0"
+                                    Text="{Binding Code}"
+                                    TextColor="Black"/>
+                                <Label
+                                    Grid.Column="1"
+                                    Text="{Binding Name}"
+                                    TextColor="Black"/>
+                                <Label
+                                    Grid.Column="2"
+                                    Text="{Binding Symbol}"
+                                    TextColor="Black"/>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
